kubernetes_env/yaml_crds/storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-upstream
  namespace: storage
  labels:
    name: storage-upstream
spec:
  selector:
    matchLabels:
      app: storage-upstream
  template:
    metadata:
      labels:
        app: storage-upstream
    spec:
      containers:
      - name: storage-upstream
        image: https://hub.docker.com/repository/docker/khanh969hn/tracing-env-fs
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: storage-upstream
  namespace: storage
  labels:
    app: storage-upstream
    service: storage-upstream
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: storage-upstream
---
kind: Service
apiVersion: v1
metadata:
  name: storage-upstream
  namespace: default
spec:
  type: ExternalName
  externalName: storage-upstream.storage.svc.cluster.local
  ports:
  - port: 8080



# kubectl port-forward (kubectl get pods  -lapp=storage-upstream -o jsonpath={.items[0].metadata.name}) 8080
